gradle plugin4.6にすると死ぬ